# KIRA

./: .gitignore  README.md  pyproject.toml
KIRA-Slack/: README.md
KiraClaw/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
KiraClaw/apps/desktop/: README.md  electron-builder.bridge.json  electron-builder.bridge.smoke.json  electron-builder.public.json  kiraclaw.bridge.pyproject.toml  main.js  package.json  preload.js
KiraClaw/apps/desktop/lib/: config-store.js  constants.js  create-window.js  daemon-controller.js  register-ipc.js  updater-helpers.js  updater-helpers.test.js  updater.js
KiraClaw/docs/: architecture.md  bridge-release-checklist.md  migration-from-kira-slack.md  qa-benchmark.md
KiraClaw/scripts/: deploy_krim_packages.sh  smoke_files_mcp.py  smoke_remote_mcp_presets.py  smoke_scheduler_mcp.py  smoke_time_mcp.py  test_with_deployed_krim.sh  verify_bridge_release.sh
KiraClaw/tests/: conftest.py  test_api.py  test_discord_adapter.py  test_discord_tools.py  test_engine.py  test_files_mcp_tools.py  test_mcp_runtime.py  test_memory_runtime.py  test_memory_store.py  test_memory_tools.py  test_proactive_service.py  test_process_tools.py  test_run_log_store.py  test_scheduler_mcp_tools.py  test_scheduler_runtime.py  test_session_manager.py  test_settings.py  test_slack_adapter.py  test_slack_retrieve_mcp_tools.py  test_slack_retrieve_oauth.py  test_slack_tools.py  test_speak_tools.py  test_system_prompt.py  test_telegram_adapter.py  test_telegram_tools.py  test_watch_runtime.py  test_watch_store.py
(+89 files in other folders)
